--- a/rezervace/templates/page/header.html
+++ b/rezervace/templates/page/header.html
@@ -1,4 +1,3 @@
 <header class="p-3 text-center">
-    <h1 class="display-3 text-info text-uppercase">Rezervace</h1>
-    <p class="text-info text-uppercase">rezervační web</p>
+    <h1 class="display-3 text-info text-uppercase text-center">Rezervace</h1>
 </header>
