--- a/rezervace/templates/zakaznici.html
+++ b/rezervace/templates/zakaznici.html
@@ -3,18 +3,17 @@
 {% block title %}Galerie autorů{% endblock %}
 
 {% block content %}
-    <h1>Galerie autorů</h1>
+    <h1>Seznam zákazníků</h1>
     <div class="row bg-dark p-3">
-    {% for autor in autori %}
+    {% for zakaznik in zakaznici %}
         <div class="col-lg-2 col-md-4">
-            <img src="{{ autor.fotografie.url }}"
-                 alt="Fotka: {{ autor.prijmeni }}"
-                 class="img-fluid rounded">
-            <p><a href="{% url 'reservation detail' autor.id %}">{{ autor.jmeno|first }}. {{ autor.prijmeni }}</a></p>
+            <img src="{{ zakaznik.profilovyObrazek.url }}"
+                 alt="Fotka: {{ zakaznik.prijmeni }}"
+                 class="img-fluid rounded" style="width: auto; height: 300px">
+            <p><a href="#"> {{ zakaznik.prijmeniZakaznika }}</a></p>
         </div>
     {% endfor %}
     </div>
     {% if perms.knihovna.add_autor %}
-      <p class="mt-3"><a href="{% url 'add_autor' %}" class="btn btn-success">Nový autor</a></p>
    {% endif %}
 {% endblock %}
