Added customer detail, and fixed index.html

--- a/rezervace/templates/index.html
+++ b/rezervace/templates/index.html
@@ -1,17 +1,16 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-lg-8 mt-3 mb-3">
+
             <h2 class="bg-info text-light text-center text-uppercase p-3">{{ nadpis }}</h2>
 
             <div class="container">
             {% for reserve in rezervace %}
-                <div class="col-lg-6">
-                    <p>{{ reserve.idrezervace }} - {{ reserve.prijmeniZakaznika }}</p>
+                <div class="col-lg-12">
+                    <p>{{ reserve.idrezervace }} - <a href="{% url 'zakaznik_detail' reserve.zakaznik.id %}">{{ reserve.zakaznik.jmenoZakaznika }} {{ reserve.zakaznik.prijmeniZakaznika }}</a> pokoj:
+                    {{ reserve.pokoj.cisloPokoje }}</p>
+                    <hr>
                 </div>
             {% endfor %}
             </div>
-        </div>
-    </div>
 {% endblock %}
