--- a/rezervace/templates/page/header.html
+++ b/rezervace/templates/page/header.html
@@ -1,3 +1,3 @@
-<header class="p-3 text-center">
-    <h1 class="display-3 text-info text-uppercase text-center">Rezervace</h1>
+<header class="p-3 text-center bg-dark">
+    <h1 class="display-3 text-info text-uppercase text-center"><a href="{% url 'index' %}">Rezervace</a></h1>
 </header>
