--- a/rezervace/templates/page/footer.html
+++ b/rezervace/templates/page/footer.html
@@ -1,4 +1,4 @@
 {% load static %}
-<footer class="container-fluid p-3 border-top">
-    <p class="text-center text-dark">Autor: &copy; 2023 Aleš Najser</p>
+<footer class="container-fluid p-3 border-top bg-black ">
+    <p class="text-center yellow">Autor: &copy; 2023 Aleš Najser</p>
 </footer>
