--- a/rezervace/templates/page/header.html
+++ b/rezervace/templates/page/header.html
@@ -1,3 +1,5 @@
-<header class="p-3 text-center bg-dark">
-    <h1 class="display-3 text-info text-uppercase text-center"><a href="{% url 'index' %}">Rezervace</a></h1>
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/styles.css' %}">
+<header class="p-3 text-centerr">
+    <h1 class="display-3 text-info text-uppercase text-center"><a href="{% url 'index' %}" class="a-header">Rezervace</a></h1>
 </header>
