--- a/rezervace/templates/customers/detail.html
+++ b/rezervace/templates/customers/detail.html
@@ -3,25 +3,16 @@
 {% block title %}{{ rezervace.jmenoZakaznika }} {{ zakaznik.prijmeniZakaznika }}{% endblock %}
 
 {% block content %}
-    <h1 class="text-center">{{ zakaznik.jmenoZakaznika }} {{ zakaznik.prijmeniZakaznika }}</h1>
-    <div class="row bg-dark p-3 text-light">
-        <div class="col-md-4">
-            <h3>Informace:</h3>
-            <p>email - <a href="mailto:{{ zakaznik.email }}">{{ zakaznik.email }}</a></p>
-            <p>telefon - {{ zakaznik.telefon }}</p>
-
+    <h1 class="text-center yellow">{{ zakaznik.jmenoZakaznika }} {{ zakaznik.prijmeniZakaznika }}</h1>
+    <div class="row bg-black p-3 text-light">
+        <div class="col-md-5">
+            <h3 class="yellow">Informace:</h3>
+            <p class="yellow">email - <a href="mailto:{{ zakaznik.email }}">{{ zakaznik.email }}</a></p>
+            <p class="yellow">telefon - {{ zakaznik.telefon }}</p>
         </div>
-        <div class="col-md-8">
-            <h2 class="text-info">profilový obrázek</h2>
+        <div class="col-md-7">
+            <h2 class="yellow">profilový obrázek</h2>
             <img src="{{ zakaznik.profilovyObrazek.url }}" height="300px">
         </div>
-    </div>
-    <div class="mt-2 mb-2">
-        {% if perms.knihovna.change_autor and user == author.editor %}
-           <a href="{% url 'update_autor' author.id %}" class="btn btn-primary">Editovat</a>
-        {% endif %}
-        {% if perms.knihovna.delete_autor and user == author.editor %}
-           <a href="{% url 'delete_autor' author.id %}" class="btn btn-danger">Smazat</a>
-        {% endif %}
     </div>
 {% endblock %}
