--- a/rezervace/templates/index.html
+++ b/rezervace/templates/index.html
@@ -2,9 +2,10 @@
 
 {% block content %}
 
-            <h2 class="bg-info text-light text-center text-uppercase p-3">{{ nadpis }}</h2>
+    <br>
+            <h2 class="yellow bg-black text-center text-uppercase p-3">{{ nadpis }}</h2>
 
-            <div class="container">
+            <div class="container index-container">
             {% for reserve in rezervace %}
                 <div class="col-lg-12">
                     <p>{{ reserve.idrezervace }} - <a href="{% url 'zakaznik_detail' reserve.zakaznik.id %}">{{ reserve.zakaznik.jmenoZakaznika }} {{ reserve.zakaznik.prijmeniZakaznika }}</a> pokoj:
