--- a/rezervace/templates/customers/detail.html
+++ b/rezervace/templates/customers/detail.html
@@ -3,7 +3,7 @@
 {% block title %}{{ rezervace.jmenoZakaznika }} {{ zakaznik.prijmeniZakaznika }}{% endblock %}
 
 {% block content %}
-    <h1 class="text-center yellow">{{ zakaznik.jmenoZakaznika }} {{ zakaznik.prijmeniZakaznika }}</h1>
+    <h1 class="text-center yellow bg-black">{{ zakaznik.jmenoZakaznika }} {{ zakaznik.prijmeniZakaznika }}</h1>
     <div class="row bg-black p-3 text-light">
         <div class="col-md-5">
             <h3 class="yellow">Informace:</h3>
